WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
173482
Hide inline captions in fullscreen. Remove fullscreen captions when no longer needed.
https://bugs.webkit.org/show_bug.cgi?id=173482
Summary
Hide inline captions in fullscreen. Remove fullscreen captions when no longer...
Jeremy Jones
Reported
2017-06-16 11:16:24 PDT
Hide inline captions in fullscreen. Remove fullscreen captions when no longer needed.
Attachments
Patch
(2.14 KB, patch)
2017-06-16 11:31 PDT
,
Jeremy Jones
no flags
Details
Formatted Diff
Diff
View All
Add attachment
proposed patch, testcase, etc.
Jeremy Jones
Comment 1
2017-06-16 11:17:14 PDT
rdar://problem/32373400
Jeremy Jones
Comment 2
2017-06-16 11:31:26 PDT
Created
attachment 313096
[details]
Patch
WebKit Commit Bot
Comment 3
2017-06-16 12:48:36 PDT
Comment on
attachment 313096
[details]
Patch Clearing flags on attachment: 313096 Committed
r218403
: <
http://trac.webkit.org/changeset/218403
>
WebKit Commit Bot
Comment 4
2017-06-16 12:48:37 PDT
All reviewed patches have been landed. Closing bug.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug