Hide inline captions in fullscreen. Remove fullscreen captions when no longer needed. https://bugs.webkit.org/show_bug.cgi?id=173482

Patch by Jeremy Jones <jeremyj@apple.com> on 2017-06-16
Reviewed by Eric Carlson.

Hide the inline captions while they are presenting to fullscreen.
Remove the text track representation as soon as it is no longer needed.
This allows the text track to render properly when returning to inline.

* html/shadow/MediaControlElements.cpp:
(WebCore::MediaControlTextTrackContainerElement::updateTextTrackRepresentation):

Canonical link: https://commits.webkit.org/190354@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@218403 268f45cc-cd09-0410-ab3c-d52691b4dbfc